Added preprocessing.py and script for task 2
- Changed clean_movies_csv.py to preprocessing.py for all csv files
- Updated init.sql to use the new cleaned files in the db
- Added script for task 2 to the scripts folder but can't test bcs I can't execute python files on the docker container
- Tried to install python on the comp0022-app using the Dockerfile but failed
- Added requirements.txt file
- Fixed warning version error in the docker-compose.yml file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   db:
     image: mysql:8.0
@@ -19,6 +17,7 @@ services:
     container_name: comp0022-app
     volumes:
       - ./src:/var/www/html
+      - ./scripts:/var/www/html/scripts
     ports:
       - "8080:80"
     depends_on:
