--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,13 @@
-flask==3.1.0
-pandas==2.2.3
-numpy==2.2.3
-scikit-learn==1.6.1
-scipy==1.15.2
+Flask
+Flask-RESTful
+Flask-CORS
+flask
+pymysql
+pandas
+matplotlib
+scipy
+numpy
+scikit-learn
+mysql-connector-python
+python-dotenv
+plotly
